<?xml version="1.0" encoding="utf-8"?>
<com.getbase.floatingactionbutton.FloatingActionsMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/paint_set_floatingActionsMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    fab:fab_addButtonColorNormal="@color/white"
    fab:fab_addButtonColorPressed="@color/white_pressed"
    fab:fab_addButtonPlusIconColor="@color/half_black"
    fab:fab_addButtonSize="mini"
    fab:fab_labelStyle="@style/menu_labels_style"
    fab:fab_labelsPosition="right">
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/paint_save_png_FAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="@color/white"
        fab:fab_colorPressed="@color/white_pressed"
        fab:fab_title="@string/save_to_png" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/paint_set_width_FAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="@color/white"
        fab:fab_colorPressed="@color/white_pressed"
        fab:fab_title="@string/paint_set_width" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/paint_set_color_FAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="@color/white"
        fab:fab_colorPressed="@color/white_pressed"
        fab:fab_title="@string/paint_set_color" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/paint_revoke_FAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="@color/white"
        fab:fab_colorPressed="@color/white_pressed"
        fab:fab_title="@string/paint_revoke" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/paint_regain_FAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_colorNormal="@color/white"
        fab:fab_colorPressed="@color/white_pressed"
        fab:fab_title="@string/paint_regain" />

</com.getbase.floatingactionbutton.FloatingActionsMenu>

